# nanomsgpp

./: .clang-format  .gitignore  CMakeLists.txt  LICENSE  Makefile
nmpp/: async_dispatcher.hpp  exception.hpp  message.hpp  native_socket.hpp  socket.hpp
test/integration/: CMakeLists.txt  integration_tests.cpp
test/ut/: CMakeLists.txt  async_dispatcher_tests.cpp  exception_tests.cpp  message_tests.cpp  socket_tests.cpp
test/ut/mocks/: async_dispatcher_mock.hpp  message_mock.hpp  nanomsg_mock.cpp  nanomsg_mock.hpp  native_socket_mock.hpp
